# fintools-mcp

./: .gitignore  README.md  pyproject.toml
fintools_mcp/: __init__.py  __main__.py  data.py  server.py
fintools_mcp/analysis/: __init__.py  position_sizer.py  trade_stats.py
fintools_mcp/indicators/: __init__.py  atr.py  ema.py  fibonacci.py  macd.py  rsi.py  vwap.py
tests/: test_analysis.py  test_indicators.py
