[project]
name = "fintools-mcp"
version = "0.1.0"
description = "Financial analysis tools for AI assistants — technical indicators, options analysis, position sizing, and trade analytics via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jett Magnuson" }]
keywords = ["mcp", "finance", "trading", "technical-analysis", "options", "stocks", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
]

[project.scripts]
fintools-mcp = "fintools_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
